--- a/examples/proto/lib/BUILD.bazel
+++ b/examples/proto/lib/BUILD.bazel
@@ -10,6 +10,7 @@ proto_library(
     visibility = ["//visibility:public"],
     deps = [
         "//examples/proto/dep:useful_proto",
+        "//examples/proto/gostyle:gostyle_proto",
     ],
 )
 
@@ -20,5 +21,6 @@ go_proto_library(
     visibility = ["//visibility:public"],
     deps = [
         "//examples/proto/dep:useful_go_proto",
+        "//examples/proto/gostyle:gostyle_go_proto",
     ],
 )
